# R2D2Project

./: Behaviors.md  README.md  my_id_robot.service.txt  requirements.txt
Custom Arduino Layout - Altium Designer/: ArduinoCustomSchematic.SchDoc  CAMtastic1.Cam  CAMtastic2.Cam  CAMtastic3.Cam  CAMtastic4.Cam  Job1.OutJob  PCB1.PcbDoc  R2D2 Custom Arduino Layout.PrjPcb  R2D2 Custom Arduino Layout.PrjPcbStructure
Custom Arduino Layout - Altium Designer/Project Outputs for ArduinoValveControl/: CustomArduinoPCB_BOM.xlsx  Design Rule Check - PCB1.drc  Design Rule Check - PCB1.html  PCB1-macro.APR_LIB  PCB1.DRR  PCB1.EXTREP  PCB1.GBL  PCB1.GBP  PCB1.GBS  PCB1.GD1  PCB1.GG1  PCB1.GM  PCB1.GM1  PCB1.GM13  PCB1.GM15  PCB1.GM17  PCB1.GM19  PCB1.GM2  PCB1.GM20  PCB1.GM3  PCB1.GM4  PCB1.GPB  PCB1.GPT  PCB1.GTL  PCB1.GTO  PCB1.GTP  PCB1.GTS  PCB1.LDP  PCB1.REP  PCB1.TXT  PCB1.apr  Pick Place for PCB1.csv  Pick Place for PCB1.txt  Status Report.Txt
Custom Arduino Layout - Altium Designer/__Previews/: ArduinoCustomSchematic.SchDocPreview
my_id_robot/: package.xml  setup.py
my_id_robot/launch/: my_robot.launch.py
my_id_robot/my_id_robot/: arduino_subscriber.py  ir_publisher.py  main_subscriber.py  opencv_subscriber.py  projector_subscriber.py  ultrasonic_publisher.py  voice_publisher.py
my_id_robot/my_id_robot/ArduinoControl/: ArduinoControl.ino  arduino.md
my_id_robot_interfaces/: CMakeLists.txt  Interfaces.md  package.xml
my_id_robot_interfaces/msg/: Sensor.msg
